# test-ci

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
src/: hello.cpp  hello.h  main.cpp
tests/: test-hello.cpp
